--- a/docker-compose copy 3.yml
+++ b/docker-compose copy 3.yml
@@ -22,59 +22,9 @@ volumes:
 # Defining a local network with the DRIVER(bridge).
 networks:
   network_local:
-    name: network_local
+    external: false
 
 services:
-  # Defining a reverse proxy service using Traefik.
-  reverse_proxy:
-    image: traefik:v2.1.1
-    container_name: reverse_proxy 
-    command:
-      - "--api.dashboard=true"
-      - "--providers.docker=true"
-      - "--providers.docker.endpoint=unix:///var/run/docker.sock"
-      - "--providers.docker.exposedbydefault=false"
-      - "--providers.docker.network=network_public"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.websecure.address=:443"
-      - "--certificatesresolvers.letsencryptresolver.acme.httpchallenge=true"
-      - "--certificatesresolvers.letsencryptresolver.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.letsencryptresolver.acme.email=you-email@domain.com"
-      - "--certificatesresolvers.letsencryptresolver.acme.storage=/etc/traefik/letsencrypt/acme.json"
-      - "--log.level=DEBUG"
-      - "--log.format=common" 
-      - "--log.filePath=/var/log/traefik/traefik.log"
-      - "--accesslog=true"
-      - "--accesslog.filepath=/var/log/traefik/access-log"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.http-catchall.rule=hostregexp(`{host:.+}`)"
-      - "traefik.http.routers.http-catchall.entrypoints=web"
-      - "traefik.http.routers.http-catchall.middlewares=redirect-https@docker"
-      - "traefik.http.routers.http-catchall.priority=1"
-      - "traefik.http.middlewares.redirect-https.redirectscheme.scheme=https"
-      - "traefik.http.routers.api.rule=Host(`traefik.docker.localhost`)"
-      - "traefik.http.routers.api.service=api@internal"
-      - "traefik.http.routers.api.middlewares=auth"
-      - "traefik.http.routers.api.priority=2"
-      # Access with username and password: test
-      - "traefik.http.middlewares.auth.basicauth.users=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/"
-    restart: on-failure
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-    ports:
-      - "80:80" # The HTTP port.
-      - "443:443" # The HTTPS port.
-      - "8080:8080" # The Web UI (Enabled by --api).
-    networks:
-      - network_local
-      # network_local:
-      #   aliases:
-      #     - gitea.pgadmin.docker.localhost
-      #     - gitea.docker.localhost
-      #     - drone.docker.localhost
-
-
   # Defining a database service for Gitea Server.
   gitea_db:
     image: postgres:12.1 # The official docker image.
@@ -97,35 +47,13 @@ services:
     networks:
       - network_local
 
-  # Defining a PgAdmin service from the database used on Gitea Server.
-  gitea_db_ui:
-    image: dpage/pgadmin4:4.17
-    container_name: gitea_db_ui
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=you-email@domain.com
-      - PGADMIN_DEFAULT_PASSWORD=secret
-    depends_on:
-      - gitea_db
-      - reverse_proxy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.gitea_db_ui.rule=Host(`gitea.pgadmin.docker.localhost`)"
-      - "traefik.http.routers.gitea_db_ui.entrypoints=websecure"
-      - "traefik.http.routers.gitea_db_ui.tls.certresolver=letsencryptresolver"
-      - "traefik.http.services.gitea_db_ui.loadbalancer.server.port=80"
-    volumes:
-      - "vol_gitea_db_ui:/var/lib/pgadmin"
-    restart: unless-stopped
-    networks:
-      - network_local
-
   # Defining a version control service using Gitea(Git with a cup of tea).
   gitea_server: 
     image: gitea/gitea:1.10.2 # The official docker image.
     container_name: gitea_server
     environment:
       - RUN_MODE=dev
-      - ROOT_URL=https://gitea.docker.localhost
+      - ROOT_URL=http://192.168.0.16:3000
       - DB_TYPE=postgres
       - DB_NAME=gitea
       - DB_HOST=gitea_db:5432
@@ -137,17 +65,11 @@ services:
     #command: gitea admin auth add-oauth --name drone --auto-discover-url https://drone.docker.localhost --key secret --secret secret
     depends_on:
       - gitea_db
-      - reverse_proxy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.gitea_server.rule=Host(`gitea.docker.localhost`)"
-      - "traefik.http.routers.gitea_server.entrypoints=websecure"
-      - "traefik.http.routers.gitea_server.tls.certresolver=letsencryptresolver"
-      - "traefik.http.services.gitea_server.loadbalancer.server.port=3000"
     volumes:
       - "vol_gitea_server:/data"
     restart: unless-stopped
     ports:
+      - "3000:3000"
       - "222:222"
     networks:
       - network_local
@@ -159,7 +81,7 @@ services:
     container_name: drone_server
     environment:
       # Required string value configures the user-facing hostname.
-      - DRONE_SERVER_HOST=drone_server:9090
+      - DRONE_SERVER_HOST=http://drone_server:8000
       # Required string value configures the user-facing protocol.
       - DRONE_SERVER_PROTO=http
       # Automatically generates an SSL certificate using Lets Encrypt,
@@ -179,7 +101,7 @@ services:
       # Required string value provides your Gitea oauth Client Secret.
       - DRONE_GITEA_CLIENT_SECRET=secret
       # Require string value provides your Gitea server address.
-      - DRONE_GITEA_SERVER=https://gitea.docker.localhost
+      - DRONE_GITEA_SERVER=http://gitea_app:3000
 
       # Enables trace logging. 
       - DRONE_LOGS_TRACE=true
@@ -197,12 +119,10 @@ services:
       - "vol_drone_server:/var/lib/drone"
     restart: always
     ports:
-      - "9090:80"
-      - "9000:443"
+      - 9000
     networks:
       - network_local
-
-
+  
   # 
   drone_agent:
     #image: drone/agent:1.6.2
@@ -216,7 +136,7 @@ services:
       - DRONE_UI_PASSWORD=root
 
       # Required string values. Defines the hostname (and optional port) used to connect to the Drone server.
-      - DRONE_RPC_HOST=drone_server:9090
+      - DRONE_RPC_HOST=drone_server:9000
       # Required string value. Provides the shared secret used by the Drone server to authenticate http requests.
       - DRONE_RPC_SECRET=secret
       # Required string value. Defines the protocol used to connect to the Drone server. The value must be either http or https.
@@ -238,15 +158,11 @@ services:
       - DRONE_RPC_DUMP_HTTP_BODY=true
     depends_on:
       - drone_server
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.drone_agent.rule=Host(`drone.docker.localhost`)"
-      - "traefik.http.routers.drone_agent.entrypoints=websecure"
-      - "traefik.http.routers.drone_agent.tls.certresolver=letsencryptresolver"
-      - "traefik.http.services.drone_agent.loadbalancer.server.port=3000"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     restart: always
+    ports:
+      - "80:3000"
     networks:
       - network_local
 
