--- a/docker-compose copy.yml
+++ b/docker-compose copy.yml
@@ -22,7 +22,7 @@ volumes:
 # Defining a local network with the DRIVER(bridge).
 networks:
   network_local:
-    name: network_local
+    external: false
 
 services:
   # Defining a reverse proxy service using Traefik.
@@ -133,8 +133,6 @@ services:
       - DB_PASSWD=postgres
       - USER_UID=1000
       - USER_GID=1000
-    # Create an OAuth Application
-    #command: gitea admin auth add-oauth --name drone --auto-discover-url https://drone.docker.localhost --key secret --secret secret
     depends_on:
       - gitea_db
       - reverse_proxy
@@ -154,17 +152,16 @@ services:
 
   # 
   drone_server:
-    #image: drone/drone:1.6.5
-    image: drone/drone:1
+    image: drone/drone:1.6.5
     container_name: drone_server
     environment:
       # Required string value configures the user-facing hostname.
-      - DRONE_SERVER_HOST=drone_server:9090
+      - DRONE_SERVER_HOST=drone.docker.localhost
       # Required string value configures the user-facing protocol.
-      - DRONE_SERVER_PROTO=http
+      - DRONE_SERVER_PROTO=https
       # Automatically generates an SSL certificate using Lets Encrypt,
       # and configures the server to accept HTTPS requests.
-      - DRONE_TLS_AUTOCERT=false
+      - DRONE_TLS_AUTOCERT=true
       # Required literal value provides the Drone shared secret.
       # This is used to authenticate the RPC connection to the server. 
       - DRONE_RPC_SECRET=secret
@@ -175,9 +172,9 @@ services:
 
       # GITEA params:
       # Required string value provides your Gitea oauth Client ID.
-      - DRONE_GITEA_CLIENT_ID=secret
+      - DRONE_GITEA_CLIENT_ID=
       # Required string value provides your Gitea oauth Client Secret.
-      - DRONE_GITEA_CLIENT_SECRET=secret
+      - DRONE_GITEA_CLIENT_SECRET=
       # Require string value provides your Gitea server address.
       - DRONE_GITEA_SERVER=https://gitea.docker.localhost
 
@@ -193,20 +190,25 @@ services:
       - DRONE_AGENTS_ENABLED=true
     depends_on:
       - gitea_server
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.drone_server.rule=Host(`drone.docker.localhost`)"
+      - "traefik.http.routers.drone_server.entrypoints=websecure"
+      - "traefik.http.routers.drone_server.tls.certresolver=letsencryptresolver"
+      - "traefik.http.services.drone_server.loadbalancer.server.port=80"
     volumes:
       - "vol_drone_server:/var/lib/drone"
     restart: always
     ports:
-      - "9090:80"
-      - "9000:443"
+      - "9000:9000"
+      # - "9090:80"
+      # - "9000:443"
     networks:
       - network_local
-
-
+  
   # 
   drone_agent:
-    #image: drone/agent:1.6.2
-    image: drone/drone-runner-docker:1
+    image: drone/agent:1.6.2
     container_name: drone_agent 
     environment:
       # Enable and setup the Dashboard:
@@ -216,11 +218,11 @@ services:
       - DRONE_UI_PASSWORD=root
 
       # Required string values. Defines the hostname (and optional port) used to connect to the Drone server.
-      - DRONE_RPC_HOST=drone_server:9090
+      - DRONE_RPC_HOST=https://drone.docker.localhost
       # Required string value. Provides the shared secret used by the Drone server to authenticate http requests.
       - DRONE_RPC_SECRET=secret
       # Required string value. Defines the protocol used to connect to the Drone server. The value must be either http or https.
-      - DRONE_RPC_PROTO=http
+      - DRONE_RPC_PROTO=https
 
       # Limits the number of concurrent pipelines that a runner can execute.
       - DRONE_RUNNER_CAPACITY=2
@@ -236,14 +238,9 @@ services:
       # should only be enabled to troubleshoot communication issues.
       - DRONE_RPC_DUMP_HTTP=true
       - DRONE_RPC_DUMP_HTTP_BODY=true
+    command: agent
     depends_on:
       - drone_server
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.drone_agent.rule=Host(`drone.docker.localhost`)"
-      - "traefik.http.routers.drone_agent.entrypoints=websecure"
-      - "traefik.http.routers.drone_agent.tls.certresolver=letsencryptresolver"
-      - "traefik.http.services.drone_agent.loadbalancer.server.port=3000"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     restart: always
