--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,6 @@ version: "3.7"
 volumes:
   vol_gitea_db:
     driver: local # Path: /var/lib/docker/volumes/quickstart-drone-ci_vol_gitea_db/_data
-  vol_gitea_db_ui:
-    driver: local # Path: /var/lib/docker/volumes/quickstart-drone-ci_vol_gitea_db_ui/_data
   vol_gitea_server:
     driver: local # Path: /var/lib/docker/volumes/quickstart-drone-ci_vol_gitea_server/_data
   vol_drone_server:
@@ -22,7 +20,7 @@ volumes:
 # Defining a local network with the DRIVER(bridge).
 networks:
   network_local:
-    name: network_local
+    external: false
 
 services:
   # Defining a reverse proxy service using Traefik.
@@ -48,15 +46,10 @@ services:
       - "--accesslog.filepath=/var/log/traefik/access-log"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.http-catchall.rule=hostregexp(`{host:.+}`)"
-      - "traefik.http.routers.http-catchall.entrypoints=web"
-      - "traefik.http.routers.http-catchall.middlewares=redirect-https@docker"
-      - "traefik.http.routers.http-catchall.priority=1"
-      - "traefik.http.middlewares.redirect-https.redirectscheme.scheme=https"
       - "traefik.http.routers.api.rule=Host(`traefik.docker.localhost`)"
       - "traefik.http.routers.api.service=api@internal"
       - "traefik.http.routers.api.middlewares=auth"
-      - "traefik.http.routers.api.priority=2"
+      - "traefik.http.routers.api.priority=1"
       # Access with username and password: test
       - "traefik.http.middlewares.auth.basicauth.users=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/"
     restart: on-failure
@@ -67,13 +60,11 @@ services:
       - "443:443" # The HTTPS port.
       - "8080:8080" # The Web UI (Enabled by --api).
     networks:
-      - network_local
-      # network_local:
-      #   aliases:
-      #     - gitea.pgadmin.docker.localhost
-      #     - gitea.docker.localhost
-      #     - drone.docker.localhost
-
+      network_local:
+        aliases:
+          - gitea.docker.localhost
+          - droneserver.docker.localhost
+          - drone.docker.localhost
 
   # Defining a database service for Gitea Server.
   gitea_db:
@@ -97,28 +88,6 @@ services:
     networks:
       - network_local
 
-  # Defining a PgAdmin service from the database used on Gitea Server.
-  gitea_db_ui:
-    image: dpage/pgadmin4:4.17
-    container_name: gitea_db_ui
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=you-email@domain.com
-      - PGADMIN_DEFAULT_PASSWORD=secret
-    depends_on:
-      - gitea_db
-      - reverse_proxy
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.gitea_db_ui.rule=Host(`gitea.pgadmin.docker.localhost`)"
-      - "traefik.http.routers.gitea_db_ui.entrypoints=websecure"
-      - "traefik.http.routers.gitea_db_ui.tls.certresolver=letsencryptresolver"
-      - "traefik.http.services.gitea_db_ui.loadbalancer.server.port=80"
-    volumes:
-      - "vol_gitea_db_ui:/var/lib/pgadmin"
-    restart: unless-stopped
-    networks:
-      - network_local
-
   # Defining a version control service using Gitea(Git with a cup of tea).
   gitea_server: 
     image: gitea/gitea:1.10.2 # The official docker image.
@@ -133,17 +102,17 @@ services:
       - DB_PASSWD=postgres
       - USER_UID=1000
       - USER_GID=1000
-    # Create an OAuth Application
-    #command: gitea admin auth add-oauth --name drone --auto-discover-url https://drone.docker.localhost --key secret --secret secret
-    depends_on:
-      - gitea_db
-      - reverse_proxy
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.gitea_server.rule=Host(`gitea.docker.localhost`)"
       - "traefik.http.routers.gitea_server.entrypoints=websecure"
       - "traefik.http.routers.gitea_server.tls.certresolver=letsencryptresolver"
       - "traefik.http.services.gitea_server.loadbalancer.server.port=3000"
+    # Create an OAuth Application
+    #command: gitea admin auth add-oauth --name drone --auto-discover-url https://drone.docker.localhost --key secret --secret secret
+    depends_on:
+      - gitea_db
+      - reverse_proxy
     volumes:
       - "vol_gitea_server:/data"
     restart: unless-stopped
@@ -154,12 +123,11 @@ services:
 
   # 
   drone_server:
-    #image: drone/drone:1.6.5
     image: drone/drone:1
     container_name: drone_server
     environment:
       # Required string value configures the user-facing hostname.
-      - DRONE_SERVER_HOST=drone_server:9090
+      - DRONE_SERVER_HOST=droneserver.docker.localhost
       # Required string value configures the user-facing protocol.
       - DRONE_SERVER_PROTO=http
       # Automatically generates an SSL certificate using Lets Encrypt,
@@ -175,11 +143,12 @@ services:
 
       # GITEA params:
       # Required string value provides your Gitea oauth Client ID.
-      - DRONE_GITEA_CLIENT_ID=secret
+      - DRONE_GITEA_CLIENT_ID=66f404d7-b65d-4515-894a-7c676977dbd8
       # Required string value provides your Gitea oauth Client Secret.
-      - DRONE_GITEA_CLIENT_SECRET=secret
+      - DRONE_GITEA_CLIENT_SECRET=_5ITY_ID44lHm7ogGe9vpvSylAXASGEEEg1cHhU_sFw=
       # Require string value provides your Gitea server address.
       - DRONE_GITEA_SERVER=https://gitea.docker.localhost
+      - DRONE_GITEA_SKIP_VERIFY=true
 
       # Enables trace logging. 
       - DRONE_LOGS_TRACE=true
@@ -191,36 +160,37 @@ services:
 
       # TODO: CHECK PARAMETERS!
       - DRONE_AGENTS_ENABLED=true
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.drone_server.rule=Host(`droneserver.docker.localhost`)"
+      - "traefik.http.routers.drone_server.entrypoints=web"
+      - "traefik.http.services.drone_server.loadbalancer.server.port=80"
     depends_on:
       - gitea_server
     volumes:
       - "vol_drone_server:/var/lib/drone"
     restart: always
-    ports:
-      - "9090:80"
-      - "9000:443"
     networks:
       - network_local
 
-
   # 
   drone_agent:
-    #image: drone/agent:1.6.2
     image: drone/drone-runner-docker:1
     container_name: drone_agent 
     environment:
       # Enable and setup the Dashboard:
+      # Access with username and password: test
       # Sets the basic authentication username used to authenticate and access the web dashboard.
       - DRONE_UI_USERNAME=root
       # Sets the basic authentication password used to authenticate and access the web dashboard.
       - DRONE_UI_PASSWORD=root
 
       # Required string values. Defines the hostname (and optional port) used to connect to the Drone server.
-      - DRONE_RPC_HOST=drone_server:9090
-      # Required string value. Provides the shared secret used by the Drone server to authenticate http requests.
-      - DRONE_RPC_SECRET=secret
+      - DRONE_RPC_HOST=droneserver.docker.localhost
       # Required string value. Defines the protocol used to connect to the Drone server. The value must be either http or https.
       - DRONE_RPC_PROTO=http
+      # Required string value. Provides the shared secret used by the Drone server to authenticate http requests.
+      - DRONE_RPC_SECRET=secret
 
       # Limits the number of concurrent pipelines that a runner can execute.
       - DRONE_RUNNER_CAPACITY=2
@@ -236,14 +206,14 @@ services:
       # should only be enabled to troubleshoot communication issues.
       - DRONE_RPC_DUMP_HTTP=true
       - DRONE_RPC_DUMP_HTTP_BODY=true
-    depends_on:
-      - drone_server
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.drone_agent.rule=Host(`drone.docker.localhost`)"
       - "traefik.http.routers.drone_agent.entrypoints=websecure"
       - "traefik.http.routers.drone_agent.tls.certresolver=letsencryptresolver"
       - "traefik.http.services.drone_agent.loadbalancer.server.port=3000"
+    depends_on:
+      - drone_server
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     restart: always
