--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -23,6 +23,55 @@ networks:
     external: false
 
 services:
+  # Defining a reverse proxy service using Traefik.
+  reverse_proxy:
+    image: traefik:v2.1.1 # Official image of the Docker Hub.
+    container_name: reverse_proxy
+    command:
+      - "--api.dashboard=true"
+      - "--providers.docker=true"
+      - "--providers.docker.endpoint=unix:///var/run/docker.sock"
+      - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=network_public"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--certificatesresolvers.letsencryptresolver.acme.httpchallenge=true"
+      - "--certificatesresolvers.letsencryptresolver.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.letsencryptresolver.acme.email=you-email@domain.com"
+      - "--certificatesresolvers.letsencryptresolver.acme.storage=/etc/traefik/letsencrypt/acme.json"
+      - "--log.level=DEBUG"
+      - "--log.format=common" 
+      - "--log.filePath=/var/log/traefik/traefik.log"
+      - "--accesslog=true"
+      - "--accesslog.filepath=/var/log/traefik/access-log"
+    labels:
+      - "traefik.enable=true"
+      # Define global redirect to https.
+      - "traefik.http.routers.http-catchall.rule=hostregexp(`{host:.+}`)"
+      - "traefik.http.routers.http-catchall.entrypoints=web"
+      - "traefik.http.routers.http-catchall.middlewares=redirect-https@docker"
+      - "traefik.http.routers.http-catchall.priority=1"
+      - "traefik.http.middlewares.redirect-https.redirectscheme.scheme=https"
+      # Define Traefik Dashboard Service. 
+      - "traefik.http.routers.api.rule=Host(`traefik.docker.localhost`)"
+      - "traefik.http.routers.api.service=api@internal"
+      - "traefik.http.routers.api.middlewares=auth"
+      - "traefik.http.routers.api.priority=2"
+      # Access with username and password: test
+      - "traefik.http.middlewares.auth.basicauth.users=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/"
+    restart: on-failure
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    ports:
+      - "80:80" # The HTTP port.
+      - "443:443" # The HTTPS port.
+      - "8080:8080" # The Web UI (Enabled by --api).
+    networks:
+      network_local:
+        aliases:
+          - gitea.docker.localhost
+          - drone.docker.localhost
+
   # Defining a database service for Gitea Server.
   gitea_db:
     image: postgres:12.1 # Official image of the Docker Hub.
@@ -50,28 +99,30 @@ services:
     image: gitea/gitea:1.10.2 # Official image of the Docker Hub.
     container_name: gitea_server
     environment:
-      # - USER=git
-      # - HOME=/home/git
-      # - GITEA_CUSTOM=/var/lib/gitea /usr/local/bin/gitea git
-      - RUN_MODE=dev
-      - ROOT_URL=http://192.168.0.16:3000
+      - ROOT_URL=https://gitea.docker.localhost
       - DB_TYPE=postgres
       - DB_NAME=gitea
       - DB_HOST=gitea_db:5432
       - DB_USER=postgres
       - DB_PASSWD=postgres
-      - USER_UID=1000
-      - USER_GID=1000
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.gitea_server.rule=Host(`gitea.docker.localhost`)"
+      - "traefik.http.routers.gitea_server.entrypoints=websecure"
+      - "traefik.http.routers.gitea_server.tls.certresolver=letsencryptresolver"
+      - "traefik.http.services.gitea_server.loadbalancer.server.port=3000"
     depends_on:
       - gitea_db
+      - reverse_proxy
     volumes:
       - "vol_gitea_server:/data"
     restart: unless-stopped
     ports:
-      - "3000:3000"
       - "22:22"
     networks:
-      - network_local
+      network_local:
+        aliases:
+          - gitea.docker.localhost
 
   # Drone Server is a runner and a standalone daemon that
   # polls the server for pending pipelines to execute.
@@ -80,10 +131,9 @@ services:
     container_name: drone_server
     environment:
       # Required string value configures the user-facing hostname.
-      - DRONE_SERVER_HOST=192.168.0.16:9090
-      #- DRONE_SERVER_HOST=droneserver.docker.localhost
+      - DRONE_SERVER_HOST=drone.docker.localhost
       # Required string value configures the user-facing protocol.
-      - DRONE_SERVER_PROTO=http
+      - DRONE_SERVER_PROTO=https
       # Automatically generates an SSL certificate using Lets Encrypt,
       # and configures the server to accept HTTPS requests.
       - DRONE_TLS_AUTOCERT=false
@@ -97,11 +147,14 @@ services:
 
       # GITEA params:
       # Require string value provides your Gitea server address.
-      - DRONE_GITEA_SERVER=http://192.168.0.16:3000
+      - DRONE_GITEA_SERVER=https://gitea.docker.localhost
       # Required string value provides your Gitea oauth Client ID.
-      - DRONE_GITEA_CLIENT_ID=9c39c09e-4fc6-4334-8e90-2e455f528bca
+      - DRONE_GITEA_CLIENT_ID=6690f953-99ca-48c9-aac0-e1aa9fa2bd42
       # Required string value provides your Gitea oauth Client Secret.
-      - DRONE_GITEA_CLIENT_SECRET=sUtelEF0Ub-jcUGzZf0LOC2s1AnjC061ooXDkx2PCwk=
+      - DRONE_GITEA_CLIENT_SECRET=A56JSpTa-OF63nKQxTX2HU0Bm6ZlKod7wsG_-NsjL_8=
+      # Boolean value disables tls verification when establishing a
+      # connection to the remote Gitea server.
+      - DRONE_GITEA_SKIP_VERIFY=true
 
       # Enables trace logging. 
       - DRONE_LOGS_TRACE=true
@@ -114,38 +167,33 @@ services:
       # TODO: CHECK PARAMETERS!
       - DRONE_AGENTS_ENABLED=true
 
-      # Optional comma separated list. Provides a list of Docker networks
-      # that are attached to every pipeline step.
+      # Provides a list of Docker networks that are attached to every pipeline step.
       - DRONE_RUNNER_NETWORKS=network_local
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.drone_server.rule=Host(`drone.docker.localhost`)"
+      - "traefik.http.routers.drone_server.entrypoints=websecure"
+      - "traefik.http.routers.drone_server.tls.certresolver=letsencryptresolver"
+      - "traefik.http.services.drone_server.loadbalancer.server.port=80"
     depends_on:
       - gitea_server
     volumes:
       - "vol_drone_server:/var/lib/drone"
     restart: always
-    ports:
-      - "9090:80"
-      - "9000:443"
     networks:
-      - network_local
+      network_local:
+        aliases:
+          - drone.docker.localhost
 
   # Drone Agents is a runners poll the server for workloads to execute.
   drone_agent:
     image: drone/drone-runner-docker:1 # Official image of the Docker Hub.
     container_name: drone_agent 
     environment:
-      # Enable and setup the Dashboard:
-      # Disables the runner’s user interface.
-      - DRONE_UI_DISABLE=false # (Default is true)
-      # Access with username and password: root
-      # Sets the basic authentication username used to authenticate and access the web dashboard.
-      - DRONE_UI_USERNAME=root
-      # Sets the basic authentication password used to authenticate and access the web dashboard.
-      - DRONE_UI_PASSWORD=root
-
       # Required string values. Defines the hostname (and optional port) used to connect to the Drone server.
-      - DRONE_RPC_HOST=drone_server:9090
+      - DRONE_RPC_HOST=drone.docker.localhost
       # Required string value. Defines the protocol used to connect to the Drone server. The value must be either http or https.
-      - DRONE_RPC_PROTO=http
+      - DRONE_RPC_PROTO=https
       # Required string value. Provides the shared secret used by the Drone server to authenticate http requests.
       - DRONE_RPC_SECRET=secret
 
@@ -168,7 +216,5 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     restart: always
-    ports:
-      - "3030:3000"
     networks:
       - network_local
