--- a/docker-compose.traefik2.yml
+++ b/docker-compose.traefik2.yml
@@ -23,6 +23,49 @@ networks:
     external: false
 
 services:
+  # Defining a reverse proxy service using Traefik.
+  reverse_proxy:
+    image: traefik:v2.1.1 # Official image of the Docker Hub.
+    container_name: reverse_proxy 
+    command:
+      - "--api.dashboard=true"
+      - "--providers.docker=true"
+      - "--providers.docker.endpoint=unix:///var/run/docker.sock"
+      - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=network_public"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--certificatesresolvers.letsencryptresolver.acme.httpchallenge=true"
+      - "--certificatesresolvers.letsencryptresolver.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.letsencryptresolver.acme.email=you-email@domain.com"
+      - "--certificatesresolvers.letsencryptresolver.acme.storage=/etc/traefik/letsencrypt/acme.json"
+      - "--log.level=DEBUG"
+      - "--log.format=common" 
+      - "--log.filePath=/var/log/traefik/traefik.log"
+      - "--accesslog=true"
+      - "--accesslog.filepath=/var/log/traefik/access-log"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.api.rule=Host(`traefik.docker.localhost`)"
+      - "traefik.http.routers.api.service=api@internal"
+      - "traefik.http.routers.api.middlewares=auth"
+      - "traefik.http.routers.api.priority=1"
+      # Access with username and password: test
+      - "traefik.http.middlewares.auth.basicauth.users=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/"
+    restart: on-failure
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    ports:
+      - "80:80" # The HTTP port.
+      - "443:443" # The HTTPS port.
+      - "8080:8080" # The Web UI (Enabled by --api).
+    networks:
+      network_local:
+        aliases:
+          - gitea.docker.localhost
+          - droneserver.docker.localhost
+          - drone.docker.localhost
+
   # Defining a database service for Gitea Server.
   gitea_db:
     image: postgres:12.1 # Official image of the Docker Hub.
@@ -50,11 +93,8 @@ services:
     image: gitea/gitea:1.10.2 # Official image of the Docker Hub.
     container_name: gitea_server
     environment:
-      # - USER=git
-      # - HOME=/home/git
-      # - GITEA_CUSTOM=/var/lib/gitea /usr/local/bin/gitea git
       - RUN_MODE=dev
-      - ROOT_URL=http://192.168.0.16:3000
+      - ROOT_URL=https://gitea.docker.localhost
       - DB_TYPE=postgres
       - DB_NAME=gitea
       - DB_HOST=gitea_db:5432
@@ -62,16 +102,26 @@ services:
       - DB_PASSWD=postgres
       - USER_UID=1000
       - USER_GID=1000
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.gitea_server.rule=Host(`gitea.docker.localhost`)"
+      - "traefik.http.routers.gitea_server.entrypoints=websecure"
+      - "traefik.http.routers.gitea_server.tls.certresolver=letsencryptresolver"
+      - "traefik.http.services.gitea_server.loadbalancer.server.port=3000"
+    # Create an OAuth Application
+    #command: gitea admin auth add-oauth --name drone --auto-discover-url https://drone.docker.localhost --key secret --secret secret
     depends_on:
       - gitea_db
+      - reverse_proxy
     volumes:
       - "vol_gitea_server:/data"
     restart: unless-stopped
     ports:
-      - "3000:3000"
       - "22:22"
     networks:
-      - network_local
+      network_local:
+        aliases:
+          - gitea.docker.localhost
 
   # Drone Server is a runner and a standalone daemon that
   # polls the server for pending pipelines to execute.
@@ -80,8 +130,7 @@ services:
     container_name: drone_server
     environment:
       # Required string value configures the user-facing hostname.
-      - DRONE_SERVER_HOST=192.168.0.16:9090
-      #- DRONE_SERVER_HOST=droneserver.docker.localhost
+      - DRONE_SERVER_HOST=droneserver.docker.localhost
       # Required string value configures the user-facing protocol.
       - DRONE_SERVER_PROTO=http
       # Automatically generates an SSL certificate using Lets Encrypt,
@@ -97,11 +146,11 @@ services:
 
       # GITEA params:
       # Require string value provides your Gitea server address.
-      - DRONE_GITEA_SERVER=http://192.168.0.16:3000
+      - DRONE_GITEA_SERVER=https://gitea.docker.localhost
       # Required string value provides your Gitea oauth Client ID.
-      - DRONE_GITEA_CLIENT_ID=9c39c09e-4fc6-4334-8e90-2e455f528bca
+      - DRONE_GITEA_CLIENT_ID=4aaef1fa-d6e7-4705-8dbb-1403608b7101
       # Required string value provides your Gitea oauth Client Secret.
-      - DRONE_GITEA_CLIENT_SECRET=sUtelEF0Ub-jcUGzZf0LOC2s1AnjC061ooXDkx2PCwk=
+      - DRONE_GITEA_CLIENT_SECRET=PvSPzNY97YHNBlIzYC0Gd_zcH5PznhIWHrdvN6POQuE=
 
       # Enables trace logging. 
       - DRONE_LOGS_TRACE=true
@@ -117,16 +166,20 @@ services:
       # Optional comma separated list. Provides a list of Docker networks
       # that are attached to every pipeline step.
       - DRONE_RUNNER_NETWORKS=network_local
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.drone_server.rule=Host(`droneserver.docker.localhost`)"
+      - "traefik.http.routers.drone_server.entrypoints=web"
+      - "traefik.http.services.drone_server.loadbalancer.server.port=80"
     depends_on:
       - gitea_server
     volumes:
       - "vol_drone_server:/var/lib/drone"
     restart: always
-    ports:
-      - "9090:80"
-      - "9000:443"
     networks:
-      - network_local
+      network_local:
+        aliases:
+          - droneserver.docker.localhost
 
   # Drone Agents is a runners poll the server for workloads to execute.
   drone_agent:
@@ -143,7 +196,7 @@ services:
       - DRONE_UI_PASSWORD=root
 
       # Required string values. Defines the hostname (and optional port) used to connect to the Drone server.
-      - DRONE_RPC_HOST=drone_server:9090
+      - DRONE_RPC_HOST=droneserver.docker.localhost
       # Required string value. Defines the protocol used to connect to the Drone server. The value must be either http or https.
       - DRONE_RPC_PROTO=http
       # Required string value. Provides the shared secret used by the Drone server to authenticate http requests.
@@ -163,12 +216,18 @@ services:
       # should only be enabled to troubleshoot communication issues.
       - DRONE_RPC_DUMP_HTTP=true
       - DRONE_RPC_DUMP_HTTP_BODY=true
+    # labels:
+    #   - "traefik.enable=true"
+    #   - "traefik.http.routers.drone_agent.rule=Host(`drone.docker.localhost`)"
+    #   - "traefik.http.routers.drone_agent.entrypoints=websecure"
+    #   - "traefik.http.routers.drone_agent.tls.certresolver=letsencryptresolver"
+    #   - "traefik.http.services.drone_agent.loadbalancer.server.port=3000"
     depends_on:
       - drone_server
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     restart: always
-    ports:
-      - "3030:3000"
     networks:
-      - network_local
+      network_local:
+        aliases:
+          - drone.docker.localhost
