--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ volumes:
 networks:
   network_local:
     external: false
+    name: network_local
 
 services:
   # Defining a database service for Gitea Server.
@@ -45,33 +46,29 @@ services:
     networks:
       - network_local
 
+
   # Defining a version control service using Gitea(Git with a cup of tea).
   gitea_server: 
     image: gitea/gitea:1.10.2 # Official image of the Docker Hub.
     container_name: gitea_server
     environment:
-      # - USER=git
-      # - HOME=/home/git
-      # - GITEA_CUSTOM=/var/lib/gitea /usr/local/bin/gitea git
-      - RUN_MODE=dev
       - ROOT_URL=http://192.168.0.16:3000
       - DB_TYPE=postgres
       - DB_NAME=gitea
       - DB_HOST=gitea_db:5432
       - DB_USER=postgres
       - DB_PASSWD=postgres
-      - USER_UID=1000
-      - USER_GID=1000
     depends_on:
       - gitea_db
     volumes:
       - "vol_gitea_server:/data"
     restart: unless-stopped
     ports:
-      - "3000:3000"
       - "22:22"
+      - "3000:3000"
     networks:
       - network_local
+
 
   # Drone Server is a runner and a standalone daemon that
   # polls the server for pending pipelines to execute.
@@ -99,10 +96,10 @@ services:
       # Require string value provides your Gitea server address.
       - DRONE_GITEA_SERVER=http://192.168.0.16:3000
       # Required string value provides your Gitea oauth Client ID.
-      - DRONE_GITEA_CLIENT_ID=9c39c09e-4fc6-4334-8e90-2e455f528bca
+      - DRONE_GITEA_CLIENT_ID=ca1df381-0dd8-4356-9db0-cc3587b44ebc
       # Required string value provides your Gitea oauth Client Secret.
-      - DRONE_GITEA_CLIENT_SECRET=sUtelEF0Ub-jcUGzZf0LOC2s1AnjC061ooXDkx2PCwk=
-
+      - DRONE_GITEA_CLIENT_SECRET=F23ZKzWL2Kdj63zJ_F1hcQlCwoNYX6KCrRh0BAW-Y4Y=
+      
       # Enables trace logging. 
       - DRONE_LOGS_TRACE=true
       # Enables debug logging:
@@ -128,10 +125,11 @@ services:
     networks:
       - network_local
 
+
   # Drone Agents is a runners poll the server for workloads to execute.
   drone_agent:
     image: drone/drone-runner-docker:1 # Official image of the Docker Hub.
-    container_name: drone_agent 
+    container_name: drone_agent
     environment:
       # Enable and setup the Dashboard:
       # Disables the runner’s user interface.
@@ -143,7 +141,7 @@ services:
       - DRONE_UI_PASSWORD=root
 
       # Required string values. Defines the hostname (and optional port) used to connect to the Drone server.
-      - DRONE_RPC_HOST=drone_server:9090
+      - DRONE_RPC_HOST=192.168.0.16:9090
       # Required string value. Defines the protocol used to connect to the Drone server. The value must be either http or https.
       - DRONE_RPC_PROTO=http
       # Required string value. Provides the shared secret used by the Drone server to authenticate http requests.
